// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: Loader rendering should render as expected 1`] = `
<div
  id="testDiv"
>
  Hejka
</div>
`;

exports[`component: Loader rendering should render as expected when loading 1`] = `
<RenderLoader
  classes={Object {}}
/>
`;

exports[`component: Loader rendering should render as expected when loading and when fill=true 1`] = `
<RenderLoader
  classes={Object {}}
  fill={true}
/>
`;
